@startuml

!include production.wsdi

!include detector.wsdi

!include core.wsdi
hide Sentence
hide RulePopulation
hide TerminalRule
hide Symbol
hide RulePopulationAccessViolationError

package production #FFFFFF {


    class Production
    Production : detector
    Production : rule
    Production : probability
    Production : __init__(self, detector, rule)
    Production : is_empty(self)
    Production : get_coordinates(self)
    Production ..> Detector
    Production ..> Rule

    class EmptyProduction
    EmptyProduction : __init__(self, detector)
    EmptyProduction --|> Production

    class ProductionPool
    ProductionPool : add_production(self, production, child_productions, probability_approach)
    ProductionPool : is_empty(self)
    ProductionPool : get_effectors(self)
    ProductionPool : get_unsatisfied_detectors(self)
    ProductionPool : get_non_empty_productions(self)
    ProductionPool : find_non_empty_productions(self, predicate)
    ProductionPool : get_best_production_for(self, symbol)
    ProductionPool ..o Production
}

@enduml
